fix issues on mobile browsers

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,20 @@ body {
     align-items: center;
     flex-direction: column;
     min-height: 100vh;
+    background-color: white;
+    background-image: url("../img/bg.jpg");
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-blend-mode: darken;
+}
+
+body:before {
+    content: "";
+    position: fixed;
+    inset: 0;
+    background-color: #fff5;
+    z-index: -1;
 }
 
 button {
@@ -21,20 +35,6 @@ button {
     border: none;
     outline: none;
     cursor: pointer;
-}
-
-/* background */
-
-body:before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    z-index: -1;
-    background-image: url("../img/bg.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity: 0.6;
 }
 
 /* header */
@@ -78,7 +78,7 @@ menu button:disabled {
 }
 
 #scrambleBtn {
-    width: 100px;
+    min-width: 100px;
 }
 
 /* size controls */
@@ -98,7 +98,7 @@ menu button:disabled {
 }
 
 .rangeContainer {
-    width: 280px;
+    width: min(280px, 70vw);
     position: relative;
 }
 
@@ -120,7 +120,7 @@ input[type="range"] {
 #puzzle {
     --size_x: 4;
     --size_y: 4;
-    --tileSize: min(calc(100 / (1 + var(--size_x)) * 1vw), 60px);
+    --tileSize: min(calc(100 / (1.5 + var(--size_x)) * 1vw), 60px);
     margin-top: 10px;
     margin-bottom: 50px;
     width: calc(var(--size_x) * var(--tileSize));
@@ -134,7 +134,6 @@ input[type="range"] {
     border: 5px solid rgb(163, 69, 15);
     background-color: rgb(241, 197, 131);
     box-shadow: 0px 0px 3px #0007 inset, 0px 0px 10px #0007;
-    outline: 1px solid rgb(114, 44, 11);
 }
 
 /* tiles */
